--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  sqflite: ^2.4.1
+  path: ^1.9.0
+  provider: ^6.1.2
+  image_picker: ^1.1.2
+  cached_network_image: ^3.4.1
+  crypto: ^3.0.6
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
