--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.4.1
   crypto: ^3.0.6
   shared_preferences: ^2.3.5
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/boardgames.db
 
   # To add assets to your application, add an assets section, like this:
   # assets:
